--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <p>9d 3sor</p>
 <a herf="https://firstshop.hu/asus-rog-maximus-xiii-extreme-glacial-p186698">
 <img src="https://firstshop.hu/img/o/186698-95aeb.png" alt="alaplap" width="104" height="142">
+    <body style="background-color:powderblue ;">
   </a>
 </body>
 </html> 
